// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lemon-reset commonjs has an empty default classname when used directly 1`] = `
<div
  className="lemon--div"
>
  ohai
</div>
`;

exports[`lemon-reset commonjs passes a snapshot test 1`] = `
<LemonReset
  className=""
  tag="div"
>
  ohai
</LemonReset>
`;

exports[`lemon-reset commonjs uses displayName in shallow render 1`] = `
<div>
  <Div>
    ohai
  </Div>
</div>
`;

exports[`lemon-reset es has an empty default classname when used directly 1`] = `
<div
  className="lemon--div"
>
  ohai
</div>
`;

exports[`lemon-reset es passes a snapshot test 1`] = `
<LemonReset
  className=""
  tag="div"
>
  ohai
</LemonReset>
`;

exports[`lemon-reset es uses displayName in shallow render 1`] = `
<div>
  <Div>
    ohai
  </Div>
</div>
`;

exports[`lemon-reset src has an empty default classname when used directly 1`] = `
<div
  className="lemon--div"
>
  ohai
</div>
`;

exports[`lemon-reset src passes a snapshot test 1`] = `
<LemonReset
  className=""
  tag="div"
>
  ohai
</LemonReset>
`;

exports[`lemon-reset src uses displayName in shallow render 1`] = `
<div>
  <Div>
    ohai
  </Div>
</div>
`;

exports[`lemon-reset umd has an empty default classname when used directly 1`] = `
<div
  className="lemon--div--1-oIF"
>
  ohai
</div>
`;

exports[`lemon-reset umd passes a snapshot test 1`] = `
<LemonReset
  className=""
  tag="div"
>
  ohai
</LemonReset>
`;

exports[`lemon-reset umd uses displayName in shallow render 1`] = `
<div>
  <Div>
    ohai
  </Div>
</div>
`;
